@startuml

title UC06 - Especificar Tarefa
left to right direction

class EspecificarTarefaUI {
    --
    getEmail()
    findNifByEmail(emailColaborador)
    getAllAreasActividade()
    getAllCategorias(codigoAreaActividade)
    getAllCaracterizacaoCompetenciaTecnica(codigoCategoria)
    registarTarefa(referencia, nifOrganizacao, designacao, descInformal, descTecnica, duracao, custo, catCod)
}

class EspecificarTarefaCTRL {
    --
    findNifByEmail(emailColaborador)
    getAllAreasActividade()
    getAllCategorias(codigoAreaActividade)
    getAllCaracterizacaoCompetenciaTecnica(codigoCategoria)
    novaTarefa(ref, designacao, descInformal, descTecnica, duracao, custo, cat, colab)
    save(tarefa)
}

class RepositorioTarefa <<Singleton>> {
    
    --
    save(tarefa)
}

class RepositorioAreaActividade <<Singleton>> {
    -List<AreaActividade>
    -AreaActividade
    --
    getAllAreasActividade()
    areaActividade()
}
class RepositorioCategoria <<Singleton>>{
    -List<Categoria>
    -categoria
    --
    getAllCategorias()
    categoria(catCod)
}

class RepositorioOrganizacao <<Singleton>> {
    -List<Organizacao>
    -organizacao
    --
    -findNifByEmail(emailColaborador)
}

class RepositorioCaracterizacaoCT <<Singleton>> {
    -List<CaracterizacaoCT>
    -caracterizacaoCT
    --
    getAllCaracterizacaoCompetenciaTecnica(codigoCategoria)
    cct(codigoCategoria)
}


class GestaoUtilizadoresCTRL {
    --
    -getEmail()
}

class Organizacao {
    -String nome
    -String NIF
    -EnderecoPostal enderecoPostal
    -Website website
    -String telefone
    -Email email
}

class Colaborador {
    -String funcao
    -String telefone
    -Organizacao organizacao
}

class Tarefa {
    -String referencia
    -String nifOrganizacao
    -String designacao
    -String descInformal
    -String descTecnica
    -Integer duracaoEst
    -Double custoEst
    -Plataforma plataforma
}

class Utilizador {
    -String nome
    -Email email
    -Password password
}

class AreaActividade{
    -String codigoAreactividade
    -String descBreve
    -String descDetalhada
}

class Categoria {
    -String codigoCategoria
    -String descBreve
    -String descDetalhada
}

class CaracterizacaoCT {
    -int idCCT
    -int grauProfMinimo
    -String obrigatoriedade
    -String codigoCategoria
}

class Email {
    -String email
}

class Password {
    -String password
}

Colaborador"0..1" --|> "1"Utilizador
EspecificarTarefaUI ..> EspecificarTarefaCTRL
EspecificarTarefaCTRL ..> Plataforma
EspecificarTarefaCTRL ..> RepositorioCategoria
EspecificarTarefaCTRL ..> RepositorioTarefa
EspecificarTarefaCTRL ..> RepositorioOrganizacao
RepositorioOrganizacao"1" --> "1.."Organizacao
EspecificarTarefaCTRL ..> RepositorioColaborador
RepositorioColaborador"1" --> "1..*"Colaborador
RepositorioTarefa"1" --> "1..*"Tarefa
RepositorioCategoria"1" --> "1..*"Categoria
Plataforma <-- Tarefa
Utilizador"1" --> "1"Email
Utilizador"1" --> "1"Password
EspecificarTarefaUI ..> GestaoUtilizadoresCTRL
EspecificarTarefaCTRL ..> RepositorioAreaActividade
RepositorioAreaActividade"1" --> "1..*"AreaActividade
EspecificarTarefaCTRL ..> RepositorioCaracterizacaoCT
RepositorioCaracterizacaoCT"1" --> "1..*"CaracterizacaoCT


@enduml